--- a/public/cards.css
+++ b/public/cards.css
@@ -1,7 +1,7 @@
 
   div.card {
     display: inline-block;
-    background-image: url('cards.png');
+    background-image: url('/cards.png');
     background-repeat: no-repeat;
     height: 80px;
     width: 60px;
@@ -23,7 +23,7 @@
   }
 
   div.cardbg {
-    background-image: url('cardbg.png');
+    background-image: url('/cardbg.png');
     background-size: 60px 80px;
     background-repeat: repeat;
     width: 60px;
@@ -65,7 +65,7 @@
 
   div.chip {
     display: inline-block;
-    background-image: url('allchips.png');
+    background-image: url('/allchips.png');
     background-repeat: no-repeat;
     width: 129px;
     height: 59px;
@@ -143,7 +143,7 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    background-image: url('feltbg.png');
+    background-image: url('/feltbg.png');
     height: 600px;
     width: 1000px;
   }
