--- a/public/poker.css
+++ b/public/poker.css
@@ -111,6 +111,18 @@
     color: darkred;
   }
 
+  div.pot {
+    position: absolute;
+    display: inline-block;
+    text-align: right;
+    padding: 5px;
+    height: 40px;
+    width: 220px;
+    margin-left: -75px;
+    top: 55%;
+    left: 50%;
+  }
+
   div.playerbet {
     position: absolute;
     display: inline-block;
@@ -119,6 +131,14 @@
     height: 40px;
     width: 220px;
     margin-left: -75px;
+  }
+
+  tt.betamt {
+    display: inline-block;
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    color: white;
   }
 
   div.smallpiles {
@@ -136,12 +156,22 @@
     font-weight: bold;
     vertical-align: top;
   }
+
   div.playerhand {
     position: absolute;
     bottom: 10px;
     right: 10px;
     transform-origin: 100% 100%;
     transform: scale(0.6);
+  }
+
+  div.board {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform-origin: 0 0;
+    transform: scale(0.8);
+    margin-left: -120px;
   }
 
   div.playerpiles {
