--- a/public/poker.css
+++ b/public/poker.css
@@ -221,3 +221,9 @@
     background-color: gray;
     padding: 1em;
   }
+
+  body {
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
