Add dealer button

--- a/public/poker.css
+++ b/public/poker.css
@@ -1,3 +1,14 @@
+  div.dealerbutton {
+    display: inline-block;
+    position: absolute;
+    background-image: url('/dealerbutton.png');
+    background-repeat: no-repeat;
+    background-size: 40px 40px;
+    top: -30px;
+    left: -30px;
+    height: 40px;
+    width: 40px;
+  }
 
   div.card {
     display: inline-block;
