--- a/public/poker.css
+++ b/public/poker.css
@@ -187,26 +187,32 @@
   div.playerinfo {
     position: absolute;
     display: inline-block;
-    background-color: #ffffffaa;
-    border: 3px solid black;
-    border-radius: 10px;
     width: 220px;
     height: 130px;
-    transform-origin: 0 0;
-    transform: scale(0.8);
     margin-left: -110px;
   }
 
-  div.playerinfo.TURN {
-    background-color: #ffff00aa;
+  div.playerdata {
+    display: block;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 220px;
+    background-color: #ffffffdd;
+    border: 3px solid black;
+    border-radius: 10px;
   }
 
-  div.playerinfo.BET {
-    background-color: #ffccccaa;
+  div.playerdata.TURN {
+    background-color: #ffff00dd;
   }
 
-  div.playerinfo.WAITING {
-    background-color: #ccffccaa;
+  div.playerdata.BET {
+    background-color: #ffccccdd;
+  }
+
+  div.playerdata.WAITING {
+    background-color: #ccffccdd;
   }
 
   div.playername {
@@ -289,10 +295,8 @@
 
   div.playerhand {
     position: absolute;
-    bottom: 10px;
+    top: 0px;
     right: 10px;
-    transform-origin: 100% 100%;
-    transform: scale(0.6);
   }
 
   div.board {
@@ -315,6 +319,10 @@
     position: relative;
     height: 600px;
     width: 1000px;
+    background-image: url('/pokertable.png');
+    background-size: 900px 370px;
+    background-repeat: no-repeat;
+    background-position: 50px 130px;
     transform-origin: 0 0;
     transform: scale(0.6);
   }
