State fixes for allins. Show hands for allins+calls when no more betting. Reduce command loop to run after TryCommand. Combine LogItem into LogItems to reduce # of docs created and fetched. Don't check game sanity if no game active. Some JS cleanup. Check/Call confusion cleanup.

--- a/public/poker.css
+++ b/public/poker.css
@@ -17,6 +17,8 @@
     background-repeat: no-repeat;
     height: 80px;
     width: 60px;
+    border: 2px solid black;
+    border-radius: 8px;
   }
 
   div.hand {
@@ -205,6 +207,7 @@
 
   div.playerdata.TURN {
     background-color: #ffffffdd;
+    color: black;
   }
 
   div.playerdata.BET {
