Massive assets upgrade

--- a/public/cards.css
+++ b/public/cards.css
@@ -1,61 +1,65 @@
-/* Auto-Generated card positions in spritesheet */
 .sa{ background-position: -0px -0px; }
-.ca{ background-position: -0px -81px; }
-.da{ background-position: -0px -162px; }
-.ha{ background-position: -0px -243px; }
-.s2{ background-position: -61.5px -0px; }
-.c2{ background-position: -61.5px -81px; }
-.d2{ background-position: -61.5px -162px; }
-.h2{ background-position: -61.5px -243px; }
-.s3{ background-position: -123px -0px; }
-.c3{ background-position: -123px -81px; }
-.d3{ background-position: -123px -162px; }
-.h3{ background-position: -123px -243px; }
-.s4{ background-position: -184.5px -0px; }
-.c4{ background-position: -184.5px -81px; }
-.d4{ background-position: -184.5px -162px; }
-.h4{ background-position: -184.5px -243px; }
-.s5{ background-position: -246px -0px; }
-.c5{ background-position: -246px -81px; }
-.d5{ background-position: -246px -162px; }
-.h5{ background-position: -246px -243px; }
-.s6{ background-position: -307.5px -0px; }
-.c6{ background-position: -307.5px -81px; }
-.d6{ background-position: -307.5px -162px; }
-.h6{ background-position: -307.5px -243px; }
-.s7{ background-position: -369px -0px; }
-.c7{ background-position: -369px -81px; }
-.d7{ background-position: -369px -162px; }
-.h7{ background-position: -369px -243px; }
-.s8{ background-position: -430.5px -0px; }
-.c8{ background-position: -430.5px -81px; }
-.d8{ background-position: -430.5px -162px; }
-.h8{ background-position: -430.5px -243px; }
-.s9{ background-position: -492px -0px; }
-.c9{ background-position: -492px -81px; }
-.d9{ background-position: -492px -162px; }
-.h9{ background-position: -492px -243px; }
-.st{ background-position: -553.5px -0px; }
-.ct{ background-position: -553.5px -81px; }
-.dt{ background-position: -553.5px -162px; }
-.ht{ background-position: -553.5px -243px; }
-.sj{ background-position: -615px -0px; }
-.cj{ background-position: -615px -81px; }
-.dj{ background-position: -615px -162px; }
-.hj{ background-position: -615px -243px; }
-.sq{ background-position: -676.5px -0px; }
-.cq{ background-position: -676.5px -81px; }
-.dq{ background-position: -676.5px -162px; }
-.hq{ background-position: -676.5px -243px; }
-.sk{ background-position: -738px -0px; }
-.ck{ background-position: -738px -81px; }
-.dk{ background-position: -738px -162px; }
-.hk{ background-position: -738px -243px; }
-
-/* Chips */
-.za{ background-position: -0px -0px; }
-.zb{ background-position: -129px -0px; }
-.zc{ background-position: -258px -0px; }
-.zd{ background-position: -387px -0px; }
-.ze{ background-position: -516px -0px; }
-.zf{ background-position: -645px -0px; }
+.s2{ background-position: -926px -0px; }
+.s3{ background-position: -1852px -0px; }
+.s4{ background-position: -2778px -0px; }
+.s5{ background-position: -3704px -0px; }
+.s6{ background-position: -4630px -0px; }
+.s7{ background-position: -5556px -0px; }
+.s8{ background-position: -6482px -0px; }
+.s9{ background-position: -7408px -0px; }
+.st{ background-position: -8334px -0px; }
+.sj{ background-position: -9260px -0px; }
+.sq{ background-position: -10186px -0px; }
+.sk{ background-position: -11112px -0px; }
+.ca{ background-position: -0px -1298px; }
+.c2{ background-position: -926px -1298px; }
+.c3{ background-position: -1852px -1298px; }
+.c4{ background-position: -2778px -1298px; }
+.c5{ background-position: -3704px -1298px; }
+.c6{ background-position: -4630px -1298px; }
+.c7{ background-position: -5556px -1298px; }
+.c8{ background-position: -6482px -1298px; }
+.c9{ background-position: -7408px -1298px; }
+.ct{ background-position: -8334px -1298px; }
+.cj{ background-position: -9260px -1298px; }
+.cq{ background-position: -10186px -1298px; }
+.ck{ background-position: -11112px -1298px; }
+.da{ background-position: -0px -2596px; }
+.d2{ background-position: -926px -2596px; }
+.d3{ background-position: -1852px -2596px; }
+.d4{ background-position: -2778px -2596px; }
+.d5{ background-position: -3704px -2596px; }
+.d6{ background-position: -4630px -2596px; }
+.d7{ background-position: -5556px -2596px; }
+.d8{ background-position: -6482px -2596px; }
+.d9{ background-position: -7408px -2596px; }
+.dt{ background-position: -8334px -2596px; }
+.dj{ background-position: -9260px -2596px; }
+.dq{ background-position: -10186px -2596px; }
+.dk{ background-position: -11112px -2596px; }
+.ha{ background-position: -0px -3894px; }
+.h2{ background-position: -926px -3894px; }
+.h3{ background-position: -1852px -3894px; }
+.h4{ background-position: -2778px -3894px; }
+.h5{ background-position: -3704px -3894px; }
+.h6{ background-position: -4630px -3894px; }
+.h7{ background-position: -5556px -3894px; }
+.h8{ background-position: -6482px -3894px; }
+.h9{ background-position: -7408px -3894px; }
+.ht{ background-position: -8334px -3894px; }
+.hj{ background-position: -9260px -3894px; }
+.hq{ background-position: -10186px -3894px; }
+.hk{ background-position: -11112px -3894px; }
+.aa{ background-position: -0px -5192px; }
+.a2{ background-position: -926px -5192px; }
+.a3{ background-position: -1852px -5192px; }
+.a4{ background-position: -2778px -5192px; }
+.a5{ background-position: -3704px -5192px; }
+.a6{ background-position: -4630px -5192px; }
+.a7{ background-position: -5556px -5192px; }
+.a8{ background-position: -6482px -5192px; }
+.a9{ background-position: -7408px -5192px; }
+.at{ background-position: -8334px -5192px; }
+.aj{ background-position: -9260px -5192px; }
+.aq{ background-position: -10186px -5192px; }
+.ak{ background-position: -11112px -5192px; }
