--- a/public/poker.css
+++ b/public/poker.css
@@ -606,6 +606,13 @@
     margin-bottom: 5px;
   }
 
+  .playercamera {
+    max-width: 100px;
+    max-height: 100px;
+    display: block;
+    border-radius: 8px;
+  }
+
   body {
     background-color: #000022ff;
     color: white;
